--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://chris-kherk.github.io/Rocky-Mountain-Oils-12/">https://chris-kherk.github.io/Rocky-Mountain-Oils-12/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-12/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-12/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-12/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Rocky+Mountain+Oils/Rocky+Mountain+Oils-12/index.html</a><br>
+                <a target="_bLank" href="https://stupendous-daffodil-537dea.netlify.app">https://stupendous-daffodil-537dea.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
